2000-02-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-types.m4 (AC_LIBGTOP_CHECK_TYPE): New macro. This
	is an improved version of AC_CHECK_TYPE which takes into account
	that we need to #include some other header files on some systems
	to get some types.
	(GNOME_LIBGTOP_TYPES): Check for <sys/bitypes.h> for Tru64 and
	use AC_LIBGTOP_CHECK_TYPE rather than AC_CHECK_TYPE.

2000-01-26  Dave Camp  <campd@oit.edu>
	
	* gnome-bonobo-check.m4 Include <bonobo.h> rather than 
	<bonobo/gnome-object.h>

2000-01-26  Dave Camp  <campd@oit.edu>

	* gnome-bonobo-check.m4: Check for bonobo_object_get_type() rather 
	than gnome_object_get_type().

2000-01-23  Peter Teichman  <peter@helixcode.com>

	* gnome-pilot.m4: i broke the version-checking macro for other
	distribs in my last commit. fixing that now.

2000-01-22  Peter Teichman  <peter@helixcode.com>

	* gnome-pilot.m4 (PILOT_LIBS): fix the version-checking macro for
	debian

2000-01-20  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-objc-checks.m4: Look for sched_yield in -lrt, too.
	Suggested by Drazen Kazar <dave@srce.hr>.

2000-01-16  Vadim Strizhevsky  <vadim@optonline.net>

	* gnome-pilot.m4: Fix typo in PILOT_LINK_HOOK.

2000-01-15  Eskil Heyn Olsen  <deity@eskil.dk>
	
	* gnome-pilot.m4: PILOT_LINK_HOOK now check pilot-link version.
	GNOME_PILOT_CHECK defaults to requiring 0.9.3.
	
2000-01-09  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: Applied patch from R. Bernstein
	<rocky@panix.com> - print a better error message when
	LibGTop's major version number mismatches.

1999-12-25  Martin Baulig  <martin@home-of-linux.org>

	* gnome-pilot.m4: Applied patch from Colin Walters to make
	it compile under Debian GNU/Linux.

1999-12-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4: Removed all guile variables.

1999-11-18  Jeff Garzik  <jgarzik@mandrakesoft.com>

	* gnome-xml-check.m4: Better scoping of below fix.
